--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,49 @@
 <!doctype html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой первый проект</title>
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    <div class="promo">
-        <div class="promo-inner">
-            <h1 class="promo-ttl">Заголовок сайта</h1>
-            <p class="promo-slogan">Описание сайта, типа тут все самое офиггенное и опупенное!</p>
-        </div>
-    </div>
 
-    <script src="scripts/script.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Мой первый проект</title>
+  <link rel="stylesheet" href="style/style.css">
+</head>
+
+<body>
+  <header class="header">
+    <div class="header-wrap">
+      <a href="#" class="main-logo">Butterfly</a>
+      <nav class="menu">
+        <ul>
+          <li>
+            <a href="#">Каталог</a>
+          </li>
+
+          <li>
+            <a href="#">Отзывы</a>
+          </li>
+
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer class="footer">
+
+  </footer>
+
+
+  <script src="scripts/script.js"></script>
 </body>
+
 </html>
