Стилизую первую страницу

--- a/www/index.html
+++ b/www/index.html
@@ -10,31 +10,64 @@
 
 <body>
   <header class="header">
-    <div class="header-wrap">
-      <a href="#" class="main-logo">Butterfly</a>
-      <nav class="menu">
-        <ul>
-          <li>
-            <a href="#">Каталог</a>
-          </li>
+    <div class="header-inner">
+      <div class="header-wrap">
+        <a href="#" class="main-logo">Butterfly</a>
+        <nav class="menu">
+          <ul>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
 
-          <li>
-            <a href="#">Отзывы</a>
-          </li>
+            <li>
+              <a href="#">Отзывы</a>
+            </li>
 
-          <li>
-            <a href="#">Контакты</a>
-          </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
 
-          <li>
-            <a href="#">FAQ</a>
-          </li>
-        </ul>
-      </nav>
+            <li>
+              <a href="#">FAQ</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
   <main>
+    <section class="promo">
+      <div class="promo-inner">
+        <div class="promo-wrap">
+          <h1 class="promo-title">Индивидуальный пошив галстуков-бабочек</h1>
+          <a href="#" class="btn">Заказать бабочку</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="services">
+      <div class="services-inner">
+        <h2 class="services-title">Наши работы</h2>
+        <div class="services-list">
+          <div class="services-item">
+            <img src="images/services-item1.jpg" alt="Классическая черная бабочка">
+          </div>
+          <div class="services-item">
+            <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы">
+          </div>
+          <div class="services-item">
+            <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку">
+          </div>
+          <div class="services-item">
+            <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой">
+          </div>
+        </div>
+        <a href="#" class="btn">Все бабочки</a>
+      </div>
+    </section>
+
+
 
   </main>
 
