--- a/www/index.html
+++ b/www/index.html
@@ -49,30 +49,88 @@
     <section class="services">
       <div class="services-inner">
         <h2 class="services-title">Наши работы</h2>
-        <div class="services-list">
+        <div class="services-wrap">
           <div class="services-item">
-            <img src="images/services-item1.jpg" alt="Классическая черная бабочка">
+            <figure class="services-figure">
+              <img src="images/services-item1.jpg" alt="Классическая черная бабочка" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
+            </figure>
           </div>
           <div class="services-item">
-            <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы">
+            <figure class="services-figure">
+              <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
+            </figure>
           </div>
           <div class="services-item">
-            <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку">
+            <figure class="services-figure">
+              <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
+            </figure>
           </div>
           <div class="services-item">
-            <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой">
+            <figure class="services-figure">
+              <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Кривая</figcaption>
+            </figure>
           </div>
         </div>
         <a href="#" class="btn">Все бабочки</a>
       </div>
     </section>
 
+    <section class="order">
+      <div class="order-inner">
+        <h2 class="order-title">Закажи пошив</h2>
+        <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет обределиться с тканью.</p>
+        <form action="#" class="form">
+          <div class="form-field form-field-third">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
+          </div>
+          <div class="form-field form-field-third">
+            <label for="phone" class="form-label">Телефон</label>
+            <input name="phone" id="phone" type="text" class="form-input">
+          </div>
+          <div class="form-field form-field-third">
+            <label for="btn" class="form-label form-label-btn">Заказать</label>
+            <button class="btn btn-order" type="submit">Заказать</button>
+          </div>
+          <div class="form-field">
+            <input name="confirm" id="checkbox" type="checkbox" class="form-checkbox">
+            <label for="checkbox" class="form-checkbox-label">
+              Даю согласие на обработку персональных данных с соответствии с <a href="#">политикой обработки персональных данных</a>
+            </label>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <section class="footer">
+
+    </section>
 
 
   </main>
 
   <footer class="footer">
-
+    <div class="footer-inner">
+      <div class="footer-wrap">
+        <a href="#" class="main-logo-footer">Butterfly</a>
+        <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
+        <ul class="social">
+          <li class="social-item">
+            <a href="#" style="background-image: url(images/icon-in.svg);" class="social-link" title="Мы в Intagramm"></a>
+          </li>
+          <li class="social-item">
+            <a href="#" style="background-image: url(images/icon-fb.svg);" class="social-link" title="Мы в Facebook"></a>
+          </li>
+          <li class="social-item">
+            <a href="#" style="background-image: url(images/icon-tg.svg);" class="social-link" title="Мы в Telegramm"></a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </footer>
 
 
