--- a/www/index.html
+++ b/www/index.html
@@ -82,7 +82,8 @@
     <section class="order">
       <div class="order-inner">
         <h2 class="order-title">Закажи пошив</h2>
-        <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На встрече он снимет мерки и поможет обределиться с тканью.</p>
+        <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На
+          встрече он снимет мерки и поможет обределиться с тканью.</p>
         <form action="#" class="form">
           <div class="form-field form-field-third">
             <label for="name" class="form-label">Ваше имя</label>
@@ -93,24 +94,18 @@
             <input name="phone" id="phone" type="text" class="form-input">
           </div>
           <div class="form-field form-field-third">
-            <label for="btn" class="form-label form-label-btn">Заказать</label>
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
           <div class="form-field">
             <input name="confirm" id="checkbox" type="checkbox" class="form-checkbox">
             <label for="checkbox" class="form-checkbox-label">
-              Даю согласие на обработку персональных данных с соответствии с <a href="#">политикой обработки персональных данных</a>
+              Даю согласие на обработку персональных данных с соответствии с <a href="#">политикой обработки
+                персональных данных</a>
             </label>
           </div>
         </form>
       </div>
     </section>
-
-    <section class="footer">
-
-    </section>
-
-
   </main>
 
   <footer class="footer">
@@ -120,13 +115,16 @@
         <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
-            <a href="#" style="background-image: url(images/icon-in.svg);" class="social-link" title="Мы в Intagramm"></a>
+            <a href="#" style="background-image: url(images/icon-in.svg);" class="social-link"
+              title="Мы в Intagramm"></a>
           </li>
           <li class="social-item">
-            <a href="#" style="background-image: url(images/icon-fb.svg);" class="social-link" title="Мы в Facebook"></a>
+            <a href="#" style="background-image: url(images/icon-fb.svg);" class="social-link"
+              title="Мы в Facebook"></a>
           </li>
           <li class="social-item">
-            <a href="#" style="background-image: url(images/icon-tg.svg);" class="social-link" title="Мы в Telegramm"></a>
+            <a href="#" style="background-image: url(images/icon-tg.svg);" class="social-link"
+              title="Мы в Telegramm"></a>
           </li>
         </ul>
       </div>
