--- a/www/catalog.html
+++ b/www/catalog.html
@@ -1,11 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Мой первый проект</title>
-  <link rel="stylesheet" href="style/style.css">
+  <title>Document</title>
 </head>
 
 <body>
@@ -32,21 +31,11 @@
             </li>
           </ul>
         </nav>
-        <button class="burger">Menu</button>
       </div>
     </div>
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-wrap">
-          <h1 class="promo-title">Индивидуальный пошив<br>галстуков-бабочек</h1>
-          <a href="#" class="btn">Заказать бабочку</a>
-        </div>
-      </div>
-    </section>
-
     <section class="services">
       <div class="services-inner">
         <h2 class="services-title">Наши работы</h2>
@@ -86,19 +75,18 @@
         <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На
           встрече он снимет мерки и поможет обределиться с тканью.</p>
         <form action="#" class="form">
-          <div class="form-field form-field-part">
+          <div class="form-field form-field-third">
             <label for="name" class="form-label">Ваше имя</label>
             <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field form-field-third">
             <label for="phone" class="form-label">Телефон</label>
             <input name="phone" id="phone" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field form-field-third">
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
         </form>
-        <button class="btn-order-tablet" type="submit">Заказать</button>
       </div>
     </section>
   </main>
@@ -128,6 +116,6 @@
 
 
   <script src="scripts/script.js"></script>
-</body>
 
+</body>
 </html>
