--- a/www/contacts.html
+++ b/www/contacts.html
@@ -38,45 +38,41 @@
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-wrap">
-          <h1 class="promo-title">Индивидуальный пошив<br>галстуков-бабочек</h1>
-          <a href="#" class="btn">Заказать бабочку</a>
-        </div>
-      </div>
-    </section>
+    <section class="contacts">
+      <div class="contacts-inner">
+        <h1 class="contacts-title">Контакты</h1>
 
-    <section class="services">
-      <div class="services-inner">
-        <h2 class="services-title">Наши работы</h2>
-        <div class="services-wrap">
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item1.jpg" alt="Классическая черная бабочка" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Кривая</figcaption>
-            </figure>
+        <ul class="tabs">
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link active">Санкт-петербург</a>
+          </li>
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link">Москва</a>
+          </li>
+          <li class="tabs-item">
+            <a href="#" class="tabs-link j-tabs-link">Великий Новгород</a>
+          </li>
+        </ul>
+
+
+        <div class="contacts-item j-contacts-item active">
+          <div class="contacts-item-wrap">
+            <div class="contacts-info">
+              <p class="contacts-address">Спасский переулок, д. 14</p>
+              <a href="tel:+78128008080" class="contacts-phone">Тел: +7 812 800-8080</a>
+              <p class="contacts-time">Пн-Пт с 9-00 до 20-00</p>
+            </div>
+            <div class="contacts-map">
+              <img src="https://yandex.ru/maps/-/CCUFaJeQgA" alt="Карта СПб" class="contacts-map-img">
+            </div>
           </div>
         </div>
-        <a href="catalog.html" class="btn">Все бабочки</a>
+        <div class="contacts-item j-contacts-item">
+          <h2 class="contacts-item-title">Москва</h2>
+        </div>
+        <div class="contacts-item j-contacts-item">
+          <h2 class="contacts-item-title">Великий Новгород</h2>
+        </div>
       </div>
     </section>
 
@@ -106,7 +102,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
-        <a href="index.html" class="main-logo-footer">Butterfly</a>
+        <a href="#" class="main-logo-footer">Butterfly</a>
         <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
