--- a/www/reviews.html
+++ b/www/reviews.html
@@ -38,45 +38,9 @@
   </header>
 
   <main>
-    <section class="promo">
-      <div class="promo-inner">
-        <div class="promo-wrap">
-          <h1 class="promo-title">Индивидуальный пошив<br>галстуков-бабочек</h1>
-          <a href="#" class="btn">Заказать бабочку</a>
-        </div>
-      </div>
-    </section>
+    <section class="reviews">
+      <div class="reviews-inner">
 
-    <section class="services">
-      <div class="services-inner">
-        <h2 class="services-title">Наши работы</h2>
-        <div class="services-wrap">
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item1.jpg" alt="Классическая черная бабочка" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
-            </figure>
-          </div>
-          <div class="services-item">
-            <figure class="services-figure">
-              <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Кривая</figcaption>
-            </figure>
-          </div>
-        </div>
-        <a href="catalog.html" class="btn">Все бабочки</a>
       </div>
     </section>
 
@@ -106,7 +70,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
-        <a href="index.html" class="main-logo-footer">Butterfly</a>
+        <a href="#" class="main-logo-footer">Butterfly</a>
         <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
