--- a/www/catalog.html
+++ b/www/catalog.html
@@ -38,9 +38,9 @@
   </header>
 
   <main>
-    <section class="services">
+    <section class="services-catalog">
       <div class="services-inner">
-        <h2 class="services-title">Наши работы</h2>
+        <h2 class="services-title-catalog">Наши работы</h2>
 
         <ul class="catalog-filter">
           <li class="catalog-filter-item">
