--- a/www/faq.html
+++ b/www/faq.html
@@ -38,7 +38,22 @@
   </header>
 
   <main>
-
+    <section class="faq">
+      <div class="faq-inner">
+        <h1 class="faq-title">Как мы работаем</h1>
+        <div class="faq-list">
+          <div class="faq-item">
+            <button class="faq-btn j-faq-btn">Как можно оплатить заказ?</button>
+            <div class="faq-answer">Как угодно можно оплатить.</div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-btn j-faq-btn">Как получить готовый заказ?</button>
+            <div class="faq-answer">Принимая во внимание показатели успешности, реализация намеченных плановых заданий является качественно новой ступенью распределения внутренних резервов и ресурсов. В частности, перспективное планирование в значительной степени обусловливает важность укрепления моральных ценностей. Имеется спорная точка зрения, гласящая примерно следующее: независимые государства представлены в исключительно положительном свете. Сложно сказать, почему активно развивающиеся страны третьего мира, вне зависимости от их уровня, должны быть разоблачены.<br><br>Учитывая ключевые сценарии поведения, понимание сути ресурсосберегающих технологий требует определения и уточнения модели развития. Также как высокое качество позиционных исследований требует анализа поставленных обществом задач. А ещё интерактивные прототипы будут призваны к ответу.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section class="order">
       <div class="order-inner">
