Сделала карусель и аккордеон

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -38,9 +38,9 @@
   </header>
 
   <main>
-    <section class="services-catalog">
-      <div class="services-inner">
-        <h2 class="services-title-catalog">Наши работы</h2>
+    <section class="catalog">
+      <div class="catalog-inner">
+        <h2 class="catalog-title">Наши работы</h2>
 
         <ul class="catalog-filter">
           <li class="catalog-filter-item">
@@ -118,13 +118,13 @@
               <figcaption class="services-photo-desc">Бабочка такая</figcaption>
             </figure>
           </div>
-          <div class="services-item" data-type="adalt">
+          <div class="services-item" data-type="fun">
             <figure class="services-figure">
               <img src="images/services-item10.jpg" alt="Котик с розовой бабочкой" class="services-photo">
               <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
             </figure>
           </div>
-          <div class="services-item" data-type="adalt">
+          <div class="services-item" data-type="fun">
             <figure class="services-figure">
               <img src="images/services-item11.jpg" alt="Котик с розовой бабочкой" class="services-photo">
               <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
@@ -137,7 +137,7 @@
             </figure>
           </div>
         </div>
-        <a href="catalog.html" class="btn">Все бабочки</a>
+        <a href="catalog.html" class="btn">Больше бабочек</a>
       </div>
     </section>
 
@@ -147,19 +147,19 @@
         <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На
           встрече он снимет мерки и поможет обределиться с тканью.</p>
         <form action="#" class="form">
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <label for="name" class="form-label">Ваше имя</label>
             <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <label for="phone" class="form-label">Телефон</label>
             <input name="phone" id="phone" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
+          <button class="btn-order-tablet" type="submit">Заказать</button>
         </form>
-        <button class="btn-order-tablet" type="submit">Заказать</button>
       </div>
     </section>
   </main>
