--- a/www/contacts.html
+++ b/www/contacts.html
@@ -82,19 +82,19 @@
         <p class="order-desc">Заполните форму - наш мастер свяжется с вами, согласует удобное время для встречи. На
           встрече он снимет мерки и поможет обределиться с тканью.</p>
         <form action="#" class="form">
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <label for="name" class="form-label">Ваше имя</label>
             <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <label for="phone" class="form-label">Телефон</label>
             <input name="phone" id="phone" type="text" class="form-input">
           </div>
-          <div class="form-field form-field-part">
+          <div class="form-field">
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
+          <button class="btn-order-tablet" type="submit">Заказать</button>
         </form>
-        <button class="btn-order-tablet" type="submit">Заказать</button>
       </div>
     </section>
   </main>
