Добавила карусель и аккордеон

--- a/www/catalog.html
+++ b/www/catalog.html
@@ -44,7 +44,7 @@
 
         <ul class="catalog-filter">
           <li class="catalog-filter-item">
-            <a href="#" class="catalog-link j-catalog-link" data-filter="all">Все</a>
+            <a href="#" class="catalog-link active j-catalog-link" data-filter="all">Все</a>
           </li>
           <li class="catalog-filter-item">
             <a href="#" class="catalog-link j-catalog-link" data-filter="strict">строгие</a>
