--- a/www/contacts.html
+++ b/www/contacts.html
@@ -58,20 +58,38 @@
         <div class="contacts-item j-contacts-item active">
           <div class="contacts-item-wrap">
             <div class="contacts-info">
-              <p class="contacts-address">Спасский переулок, д. 14</p>
+              <p class="contacts-address">СПб, Спасский переулок, д. 14</p>
               <a href="tel:+78128008080" class="contacts-phone">Тел: +7 812 800-8080</a>
               <p class="contacts-time">Пн-Пт с 9-00 до 20-00</p>
             </div>
             <div class="contacts-map">
-              <img src="https://yandex.ru/maps/-/CCUFaJeQgA" alt="Карта СПб" class="contacts-map-img">
+              <div class=contacts-map-img style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/spasskiy_pereulok_14_35/Z0kYdQZpTUIHQFtjfXVzeX1gZQ==/?indoorLevel=1&ll=30.319470%2C59.928131&utm_medium=mapframe&utm_source=maps&z=16.59" style="color:#eee;font-size:12px;position:absolute;top:14px;">Спасский переулок, 14/35 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUFmOFA0A" width="733" height="420" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
             </div>
           </div>
         </div>
         <div class="contacts-item j-contacts-item">
-          <h2 class="contacts-item-title">Москва</h2>
+          <div class="contacts-item-wrap">
+            <div class="contacts-info">
+              <p class="contacts-address">Москва, Спасский тупик 4</p>
+              <a href="tel:+78128008080" class="contacts-phone">Тел: +6 666 666-6666</a>
+              <p class="contacts-time">Пн-Пт с 0-00 до 0-00</p>
+            </div>
+            <div class="contacts-map">
+              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/213/moscow/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Москва</a><a href="https://yandex.ru/maps/213/moscow/house/spasskiy_tupik_4/Z04YcANlS0IBQFtvfXt2dH1qZQ==/?ll=37.645276%2C55.775191&utm_medium=mapframe&utm_source=maps&z=17.15" style="color:#eee;font-size:12px;position:absolute;top:14px;">Спасский тупик, 4 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUFmSqn~B" width="733" height="420" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            </div>
+          </div>
         </div>
         <div class="contacts-item j-contacts-item">
-          <h2 class="contacts-item-title">Великий Новгород</h2>
+          <div class="contacts-item-wrap">
+            <div class="contacts-info">
+              <p class="contacts-address">Великий Новгород, Спасский переулок, д. 1</p>
+              <a href="tel:+78128008080" class="contacts-phone">Тел: +5 555 555-5555</a>
+              <p class="contacts-time">Пн-Вскр с 9-00 до 15-00</p>
+            </div>
+            <div class="contacts-map">
+              <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/24/veliky-novgorod/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Великий Новгород</a><a href="https://yandex.ru/maps/24/veliky-novgorod/house/spasskiy_pereulok_1/Z0gYdABjSkACQFtifXh5cX9hZg==/?ll=31.273356%2C58.480322&utm_medium=mapframe&utm_source=maps&z=17.15" style="color:#eee;font-size:12px;position:absolute;top:14px;">Спасский переулок, 1 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CCUFmSuSOD" width="733" height="420" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
