--- a/www/reviews.html
+++ b/www/reviews.html
@@ -41,44 +41,44 @@
     <section class="reviews">
       <div class="reviews-inner">
         <h1 class="reviews-title">Отзывы</h1>
-        <div class="reviews-list j-reviews-corousel">
-          <div class="reviews-item-wrap">
-            <div class="reviews-item">
-              <div class="reviews-img-wrap">
-                <img src="images/reviews-Lidia.jpg" alt="" class="reviews-img">
+
+        <div class="revies-wrap">
+          <div class="reviews-list j-reviews-corousel">
+            <div class="reviews-item-wrap">
+              <div class="reviews-item">
+                <div class="reviews-img-wrap">
+                  <img src="images/reviews-Lidia.jpg" alt="" class="reviews-img">
+                </div>
+                <div class="reviews-content">
+                  <p class="reviews-name">Лидия Ивановна</p>
+                  <blockquote class="reviews-quote">Пацаны красавчики! Быстро и аккуратно починили мой лододос!<br>
+                    А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</blockquote>
+                </div>
               </div>
-              <div class="reviews-content">
-                <p class="reviews-name">Лидия Ивановна</p>
-                <blockquote class="reviews-quote">Пацаны красавчики! Быстро и аккуратно починили мой лододос!<br>
-                  А так же вынесли за собой весь мусор! Еще и в шапке ходют - ван лав!</blockquote>
+            </div>
+            <div class="reviews-item-wrap">
+              <div class="reviews-item">
+                <div class="reviews-img-wrap">
+                  <img src="images/reviews-dog.jpg" alt="" class="reviews-img">
+                </div>
+                <div class="reviews-content">
+                  <p class="reviews-name">Пёс</p>
+                  <blockquote class="reviews-quote">Бабочка понравилась, но лучше бы я поел.</blockquote>
+                </div>
+              </div>
+            </div>
+            <div class="reviews-item-wrap">
+              <div class="reviews-item">
+                <div class="reviews-img-wrap">
+                  <img src="images/reviews-cat.jpg" alt="" class="reviews-img">
+                </div>
+                <div class="reviews-content">
+                  <p class="reviews-name">Кот</p>
+                  <blockquote class="reviews-quote">Бабочка не понравилась, лучше бы поел!</blockquote>
+                </div>
               </div>
             </div>
           </div>
-
-          <div class="reviews-item-wrap">
-            <div class="reviews-item">
-              <div class="reviews-img-wrap">
-                <img src="images/reviews-dog.jpg" alt="" class="reviews-img">
-              </div>
-              <div class="reviews-content">
-                <p class="reviews-name">Пёс</p>
-                <blockquote class="reviews-quote">Бабочка понравилась, но лучше бы я поел.</blockquote>
-              </div>
-            </div>
-          </div>
-
-          <div class="reviews-item-wrap">
-            <div class="reviews-item">
-              <div class="reviews-img-wrap">
-                <img src="images/reviews-cat.jpg" alt="" class="reviews-img">
-              </div>
-              <div class="reviews-content">
-                <p class="reviews-name">Кот</p>
-                <blockquote class="reviews-quote">Бабочка не понравилась, лучше бы поел!</blockquote>
-              </div>
-            </div>
-          </div>
-
         </div>
 
       </div>
