--- a/www/catalog.html
+++ b/www/catalog.html
@@ -16,7 +16,7 @@
         <nav class="menu j-menu">
           <ul>
             <li>
-              <a href="catalog.html">Каталог</a>
+              <a class="menu-active" href="catalog.html">Каталог</a>
             </li>
 
             <li>
@@ -66,74 +66,74 @@
         <div class="services-wrap">
           <div class="services-item" data-type="strict">
             <figure class="services-figure">
-              <img src="images/services-item1.jpg" alt="Классическая черная бабочка" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item1.jpg" alt="Классическая черная бабочка" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка такая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="adalt">
             <figure class="services-figure">
-              <img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item2.jpg" alt="Бабочка с рисунками стрекозы" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка растакая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="adalt">
             <figure class="services-figure">
-              <img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item3.jpg" alt="Мужчина в костюме и в бабочке в клетку" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка сякая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="pet">
             <figure class="services-figure">
-              <img src="images/services-item4.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Кривая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item4.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Кривая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="strict">
             <figure class="services-figure">
-              <img src="images/services-item5.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item5.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка такая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="strict">
             <figure class="services-figure">
-              <img src="images/services-item6.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item6.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка растакая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="child">
             <figure class="services-figure">
-              <img src="images/services-item7.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item7.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка сякая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="strict">
             <figure class="services-figure">
-              <img src="images/services-item8.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Кривая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item8.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Кривая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="strict">
             <figure class="services-figure">
-              <img src="images/services-item9.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка такая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item9.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка такая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="fun">
             <figure class="services-figure">
-              <img src="images/services-item10.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка растакая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item10.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка растакая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="fun">
             <figure class="services-figure">
-              <img src="images/services-item11.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Бабочка сякая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item11.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Бабочка сякая</figcaption></a>
             </figure>
           </div>
           <div class="services-item" data-type="fun">
             <figure class="services-figure">
-              <img src="images/services-item12.jpg" alt="Котик с розовой бабочкой" class="services-photo">
-              <figcaption class="services-photo-desc">Кривая</figcaption>
+              <a href="#" class="serv-link"><img src="images/services-item12.jpg" alt="Котик с розовой бабочкой" class="services-photo">
+              <figcaption class="services-photo-desc">Кривая</figcaption></a>
             </figure>
           </div>
         </div>
@@ -149,16 +149,15 @@
         <form action="#" class="form">
           <div class="form-field">
             <label for="name" class="form-label">Ваше имя</label>
-            <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
+            <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input" value="Иван Иванов">
           </div>
           <div class="form-field">
             <label for="phone" class="form-label">Телефон</label>
-            <input name="phone" id="phone" type="text" class="form-input">
+            <input name="phone" id="phone" type="tel" class="form-input" value="+7 800 888-88-88">
           </div>
-          <div class="form-field">
+          <div class="form-field form-field-tablet">
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
-          <button class="btn-order-tablet" type="submit">Заказать</button>
         </form>
       </div>
     </section>
@@ -167,7 +166,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
-        <a href="#" class="main-logo-footer">Butterfly</a>
+        <a href="index.html" class="main-logo main-logo-footer">Butterfly</a>
         <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
