--- a/www/contacts.html
+++ b/www/contacts.html
@@ -24,7 +24,7 @@
             </li>
 
             <li>
-              <a href="contacts.html">Контакты</a>
+              <a class="menu-active" href="contacts.html">Контакты</a>
             </li>
 
             <li>
@@ -102,16 +102,15 @@
         <form action="#" class="form">
           <div class="form-field">
             <label for="name" class="form-label">Ваше имя</label>
-            <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input">
+            <input placeholder="Введите имя и фамилию" name="name" id="name" type="text" class="form-input" value="Иван Иванов">
           </div>
           <div class="form-field">
             <label for="phone" class="form-label">Телефон</label>
-            <input name="phone" id="phone" type="text" class="form-input">
+            <input name="phone" id="phone" type="tel" class="form-input" value="+7 800 888-88-88">
           </div>
-          <div class="form-field">
+          <div class="form-field form-field-tablet">
             <button class="btn btn-order" type="submit">Заказать</button>
           </div>
-          <button class="btn-order-tablet" type="submit">Заказать</button>
         </form>
       </div>
     </section>
@@ -120,7 +119,7 @@
   <footer class="footer">
     <div class="footer-inner">
       <div class="footer-wrap">
-        <a href="#" class="main-logo-footer">Butterfly</a>
+        <a href="index.html" class="main-logo main-logo-footer">Butterfly</a>
         <a href="tel:+78128008080" class="phone">+7 812 800-80-80</a>
         <ul class="social">
           <li class="social-item">
